force-app/main/default/objects/OCE__Study__c/OCE__Study__c.object-meta.xml
<CustomObject>
    <description>Study</description>
    <label>Study</label>
    <nameField>
        <label>Study Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Studies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>