force-app/main/default/objects/OCE__Study__c/fields/OCE__Acronym__c.field-meta.xml
<CustomField>
    <fullName>OCE__Acronym__c</fullName>
    <description>The acronym or initials used to identify a clinical study (not all studies have one). For example, the title acronym for the Women&apos;s Health Initiative is &quot;WHI.&quot;</description>
    <inlineHelpText>The acronym or initials used to identify a clinical study (not all studies have one). For example, the title acronym for the Women&apos;s Health Initiative is &quot;WHI.&quot;</inlineHelpText>
    <label>Acronym</label>
    <length>255</length>
    <type>Text</type>
</CustomField>