force-app/main/default/objects/OCE__Study__c/fields/OCE__Age__c.field-meta.xml
<CustomField>
    <fullName>OCE__Age__c</fullName>
    <description>A type of eligibility criteria that indicates the age a person must be to participate in a clinical study. This may be indicated by a specific age or in an age group.</description>
    <inlineHelpText>A type of eligibility criteria that indicates the age a person must be to participate in a clinical study. This may be indicated by a specific age or in an age group.</inlineHelpText>
    <label>Age</label>
    <type>TextArea</type>
</CustomField>