force-app/main/default/objects/OCE__Study__c/fields/OCE__EndDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__EndDate__c</fullName>
    <description>Date that the study ends. Often the date of the last patient last visit.</description>
    <inlineHelpText>Date that the study ends. Often the date of the last patient last visit.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>