force-app/main/default/objects/OCE__Study__c/fields/OCE__Fundedby__c.field-meta.xml
<CustomField>
    <fullName>OCE__Fundedby__c</fullName>
    <description>Describes the organization that provides funding or support for a clinical study. This support may include activities related to funding, design, implementation, data analysis, or reporting.</description>
    <inlineHelpText>Describes the organization that provides funding or support for a clinical study. This support may include activities related to funding, design, implementation, data analysis, or reporting.</inlineHelpText>
    <label>Funded by</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>NIH</fullName>
            </value>
            <value>
                <fullName>U.S. Fed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>