force-app/main/default/objects/OCE__Study__c/fields/OCE__Gender__c.field-meta.xml
<CustomField>
    <fullName>OCE__Gender__c</fullName>
    <description>A type of eligibility criteria that indicates the sex of people who may participate in a clinical study (all, female, male). Sex is a person&apos;s classification as female or male based on biological distinctions. Sex is distinct from gender-based eligibility.</description>
    <inlineHelpText>A type of eligibility criteria that indicates the sex of people who may participate in a clinical study (all, female, male). Sex is a person&apos;s classification as female or male based on biological distinctions. Sex is distinct from gender-based eligibility</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>