force-app/main/default/objects/OCE__Study__c/fields/OCE__GeographicScope__c.field-meta.xml
<CustomField>
    <fullName>OCE__GeographicScope__c</fullName>
    <description>Countries in which research facilities for a study are located.</description>
    <inlineHelpText>Countries in which research facilities for a study are located.</inlineHelpText>
    <label>Geographic Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__Countries</valueSetName>
    </valueSet>
</CustomField>