force-app/main/default/objects/OCE__Study__c/fields/OCE__InvestigationalIndication__c.field-meta.xml
<CustomField>
    <fullName>OCE__InvestigationalIndication__c</fullName>
    <description>The disease, disorder, syndrome, illness, or injury that is being studied.</description>
    <inlineHelpText>The disease, disorder, syndrome, illness, or injury that is being studied.</inlineHelpText>
    <label>Investigational Indication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>