force-app/main/default/objects/OCE__Study__c/fields/OCE__InvestigationalProduct__c.field-meta.xml
<CustomField>
    <fullName>OCE__InvestigationalProduct__c</fullName>
    <description>The product or molecule that will be evaluated in the study.</description>
    <inlineHelpText>The product or molecule that will be evaluated in the study.</inlineHelpText>
    <label>Investigational Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>