force-app/main/default/objects/OCE__Study__c/fields/OCE__OfflineCreatedbyId__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineCreatedbyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Globally unique string that identifies an offline created record.</description>
    <inlineHelpText>Globally unique string that identifies an offline created record.</inlineHelpText>
    <label>Offline Created by Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfflineStudyCreatedBy</relationshipName>
    <type>Lookup</type>
</CustomField>