force-app/main/default/objects/OCE__Study__c/fields/OCE__OutcomeMeasures__c.field-meta.xml
<CustomField>
    <fullName>OCE__OutcomeMeasures__c</fullName>
    <description>For clinical trials, a planned measurement described in the protocol that is used to determine the effect of an intervention/treatment on participants. For observational studies, a measurement or observation that is used to describe patterns of diseases.</description>
    <inlineHelpText>For clinical trials, a planned measurement described in the protocol that is used to determine the effect of an intervention/treatment on participants. For observational studies, a measurement or observation that is used to describe patterns of diseases.</inlineHelpText>
    <label>Outcome Measures</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>