force-app/main/default/objects/OCE__Study__c/fields/OCE__PatientsEnrolled__c.field-meta.xml
<CustomField>
    <fullName>OCE__PatientsEnrolled__c</fullName>
    <description>Total number of patients enrolled in the study across all sites.</description>
    <inlineHelpText>Total number of patients enrolled in the study across all sites.</inlineHelpText>
    <label>Patients Enrolled</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>