force-app/main/default/objects/OCE__Study__c/fields/OCE__PatientsScreened__c.field-meta.xml
<CustomField>
    <fullName>OCE__PatientsScreened__c</fullName>
    <description>Total number of patients screened in the study across all sites.</description>
    <inlineHelpText>Total number of patients screened in the study across all sites.</inlineHelpText>
    <label>Patients Screened</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>