force-app/main/default/objects/OCE__Study__c/fields/OCE__Phase__c.field-meta.xml
<CustomField>
    <fullName>OCE__Phase__c</fullName>
    <description>The stage of a clinical trial studying a drug or biological product, based on definitions developed by the U.S. Food and Drug Administration (FDA). The phase is based on the study&apos;s objective, the number of participants, and other characteristics.</description>
    <inlineHelpText>The stage of a clinical trial studying a drug or biological product, based on definitions developed by the U.S. Food and Drug Administration (FDA). The phase is based on the study&apos;s objective, the number of participants, and other characteristics.</inlineHelpText>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early Phase I</fullName>
            </value>
            <value>
                <fullName>Phase I</fullName>
            </value>
            <value>
                <fullName>Phase I/II</fullName>
            </value>
            <value>
                <fullName>Phase II</fullName>
            </value>
            <value>
                <fullName>Phase II/III</fullName>
            </value>
            <value>
                <fullName>Phase III</fullName>
            </value>
            <value>
                <fullName>Phase IV</fullName>
            </value>
            <value>
                <fullName>Phase V</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>