force-app/main/default/objects/OCE__Study__c/fields/OCE__RecruitmentStatus__c.field-meta.xml
<CustomField>
    <fullName>OCE__RecruitmentStatus__c</fullName>
    <description>Stages of Recruitment Process.</description>
    <inlineHelpText>Stages of Recruitment Process.</inlineHelpText>
    <label>Recruitment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active, not recruiting</fullName>
            </value>
            <value>
                <fullName>Approved for marketing</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Enrolling by invitation</fullName>
            </value>
            <value>
                <fullName>Not yet recruiting</fullName>
            </value>
            <value>
                <fullName>Recruiting</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Withheld</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>