force-app/main/default/objects/OCE__Study__c/fields/OCE__ScientificTitle__c.field-meta.xml
<CustomField>
    <fullName>OCE__ScientificTitle__c</fullName>
    <description>The official title of a protocol used to identify a clinical study or a short title written in language intended for the lay public.</description>
    <inlineHelpText>The official title of a protocol used to identify a clinical study or a short title written in language intended for the lay public.</inlineHelpText>
    <label>Scientific Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>