force-app/main/default/objects/OCE__Study__c/fields/OCE__ScreenedEnrolledRatio__c.field-meta.xml
<CustomField>
    <fullName>OCE__ScreenedEnrolledRatio__c</fullName>
    <description>A formula that evaluates the total number of patients screened by the number of enrolled to determine recruitment progress.</description>
    <formula>TEXT(OCE__PatientsScreened__c)+ &apos;:&apos; + TEXT(OCE__PatientsEnrolled__c)</formula>
    <inlineHelpText>A formula that evaluates the total number of patients screened by the number of enrolled to determine recruitment progress.</inlineHelpText>
    <label>Screened/Enrolled Ratio</label>
    <type>Text</type>
</CustomField>