force-app/main/default/objects/OCE__Study__c/fields/OCE__SponsorCollaborators__c.field-meta.xml
<CustomField>
    <fullName>OCE__SponsorCollaborators__c</fullName>
    <description>A sponsor is the organization or person who initiates the study and who has authority and control over the study. A collaborator is an organization other than the sponsor that provides support for a clinical study. This support may include activities related to funding, design, implementation, data analysis, or reporting.</description>
    <inlineHelpText>A sponsor is the organization or person who initiates the study and who has authority and control over the study. A collaborator is an organization other than the sponsor that provides support for a clinical study.</inlineHelpText>
    <label>Sponsor/Collaborators</label>
    <type>TextArea</type>
</CustomField>