force-app/main/default/objects/OCE__Study__c/fields/OCE__StartDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__StartDate__c</fullName>
    <description>Date that the study begins. Often the first subject first visit date is considered to be the study start.</description>
    <inlineHelpText>Date that the study begins. Often the first subject first visit date is considered to be the study start.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>