force-app/main/default/objects/OCE__Study__c/fields/OCE__StatusColorCode__c.field-meta.xml
<CustomField>
    <fullName>OCE__StatusColorCode__c</fullName>
    <description>Will drive a status indicator of the study. This value can be set using standard SFDC workflow rules based on client requirements.</description>
    <inlineHelpText>Will drive a status indicator of the study. This value can be set using standard SFDC workflow rules based on client requirements.</inlineHelpText>
    <label>Status Color Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>