force-app/main/default/objects/OCE__Study__c/fields/OCE__StudyID__c.field-meta.xml
<CustomField>
    <fullName>OCE__StudyID__c</fullName>
    <description>External identifier that links the study to another system.</description>
    <externalId>true</externalId>
    <inlineHelpText>External identifier that links the study to another system.</inlineHelpText>
    <label>Study ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>