force-app/main/default/objects/OCE__Study__c/fields/OCE__StudyStatus__c.field-meta.xml
<CustomField>
    <fullName>OCE__StudyStatus__c</fullName>
    <description>Describes the current state of the study.</description>
    <inlineHelpText>Describes the current state of the study.</inlineHelpText>
    <label>Study Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed Follow Up / In Analysis</fullName>
            </value>
            <value>
                <fullName>Closed To Enrollment</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
            <value>
                <fullName>Enrolling</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Open To Enrollment</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Proposed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>