force-app/main/default/objects/OCE__Study__c/fields/OCE__StudyURL__c.field-meta.xml
<CustomField>
    <fullName>OCE__StudyURL__c</fullName>
    <description>Website link to an external system with study information.</description>
    <inlineHelpText>Website link to an external system with study information.</inlineHelpText>
    <label>Study URL</label>
    <type>Url</type>
</CustomField>