force-app/main/default/objects/OCE__Study__c/fields/OCE__Type__c.field-meta.xml
<CustomField>
    <fullName>OCE__Type__c</fullName>
    <description>Describes the nature of a clinical study. Study types include interventional studies (also called clinical trials), observational studies (including patient registries), and expanded access.</description>
    <inlineHelpText>Describes the nature of a clinical study. Study types include interventional studies (also called clinical trials), observational studies (including patient registries), and expanded access.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interventional</fullName>
            </value>
            <value>
                <fullName>Observational</fullName>
            </value>
            <value>
                <fullName>Expanded Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>